samples/_failures_safe/1761548830_9adf46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5552c8ba.c: In function ‘main’:
./samples/SAFE/__tmp_5552c8ba.c:181:5: error: expected identifier or ‘(’ at end of input
  181 |     int
      |     ^~~
./samples/SAFE/__tmp_5552c8ba.c:181:5: error: expected declaration or statement at end of input
